# NetworkProxy

./: .gitignore  CMakeLists.txt  NETWORK_PROXY_DEVELOPMENT_PLAN.md
cert/ca/: root_ca.crt  root_ca.key
cert/cache/: 127.0.0.1.ext
cert/temp/: packet_upstream.crt  packet_upstream.key  packet_upstream.pfx  upstream.crt  upstream.key  upstream.pfx
config/: proxy.yaml  proxy_e2e.yaml  proxy_packet_smoke.yaml  proxy_smoke.yaml  proxy_test.yaml  rules.dsl  rules_packet_smoke.dsl
docs/: coding_style.md
reports/: E2E_RUNBOOK.md  e2e_validation_report.md  one_click_summary.md  packet_smoke_report.md
src/: main.cpp
src/app/: application.cpp  application.h
src/capture/: flow_table.cpp  flow_table.h  wfp_capture.cpp  wfp_capture.h  wfp_redirect_controller.cpp  wfp_redirect_controller.h  win_divert_capture.cpp  win_divert_capture.h
src/common/: string_utils.cpp  string_utils.h
src/config/: app_config.cpp  app_config.h
src/logging/: logger.cpp  logger.h
src/patch/: patch_engine.cpp  patch_engine.h
src/protocol/: http_protocol_adapter.cpp  http_protocol_adapter.h  http_types.h  protocol_detector.cpp  protocol_detector.h  protocol_manager.cpp  protocol_manager.h
src/proxy/: proxy_server.cpp  proxy_server.h
src/rules/: rule_engine.cpp  rule_engine.h
src/tls/: certificate_manager.cpp  certificate_manager.h  https_mitm_proxy.cpp  https_mitm_proxy.h  openssl_process.cpp  openssl_process.h
src/transport/: socket_utils.cpp  socket_utils.h  tcp_proxy_server.cpp  tcp_proxy_server.h  tcp_reassembly_buffer.cpp  tcp_reassembly_buffer.h  udp_proxy_server.cpp  udp_proxy_server.h
tests/: unit_tests.cpp
tools/: e2e_clean_validation.ps1  echo_servers.ps1  one_click_run.ps1  packet_smoke_test.ps1  smoke_test.ps1
